--- a/flappyBird.html
+++ b/flappyBird.html
@@ -10,15 +10,11 @@
 
   </head>
  
-  <body>
+  <body id="page">
 
     <h1>Flappy Bird!</h1>
     <canvas></canvas>
     <h3>Press Space to Jump!</h3>
-
-    <canvas>
-      
-    </canvas>
 
     <script src = "flappyBird.js" type = "text/javascript"></script>
   </body>
