--- a/floppyFish.html
+++ b/floppyFish.html
@@ -5,16 +5,16 @@
   <head>
 
     <meta name = "viewport" content = "width=device-width">
-    <title>Flappy Bird | Meherzan Gai</title>
+    <title>Floppy Fish | Meherzan Gai</title>
     <link href = "floppyFish.css" rel = "stylesheet" type = "text/css">
 
   </head>
  
   <body id="page">
 
-    <h1>Flappy Bird!</h1>
+    <h1>Floppy Fish!</h1>
     <canvas></canvas>
-    <h3>Press Space to Jump!</h3>
+    <h3>Press Space to Flop!</h3>
 
     <script src = "floppyFish.js" type = "text/javascript"></script>
   </body>
